Fixed buttons and made main search button visible.

--- a/src/app/pages/detailsPages/attractions/attractions.page.scss
+++ b/src/app/pages/detailsPages/attractions/attractions.page.scss
@@ -187,6 +187,9 @@ $padding: 10px;
 
   }
 }
+button:hover{
+  background-color: rgb(65,105,225) !important;
+}
 
 @media only screen and (max-width: 600px) {
   .sticky-container {
@@ -197,32 +200,12 @@ $padding: 10px;
     padding-right: $padding;
     position: fixed;
     top: 50%;
-    left: -$sticky-width;
-    width: 0px;
-    height: auto;
+    left: -20px;
+    width: auto;
+    height: 20px;
     z-index: 9999;
-    margin-top: -$buttons-height;
+    margin-top: -25px;
     text-align: center;
-
-
-    a {
-      padding:0 !important;
-      display: block;
-      text-align: left;
-      height: $buttons-height;
-      width: $sticky-width;
-      padding: 8px 16px;
-      color: white !important;
-      font-family: Arial, sans-serif;
-      font-size: 17px;
-      font-weight: bold;
-      text-decoration: none;
-
-      button {
-        max-height: 100%;
-        color: white !important;
-        text-align: right;
-      }
-    }
   }
+
 }
